update: eng fonts

--- a/assets/fonts/fonts.scss
+++ b/assets/fonts/fonts.scss
@@ -2,3 +2,8 @@
   font-family: 'NotoSerif-Regular';
   src: url('~/assets/fonts/NotoSerif-Regular.ttf');
 }
+
+@font-face {
+  font-family: 'EduVICWANTBeginner';
+  src: url('~/assets/fonts/EduVICWANTBeginner.ttf');
+}
